manifests/001-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: em-backend-deployment
spec:
  selector:
    matchLabels:
      app: em-backend-deployment
  template:
    metadata:
      labels:
        app: em-backend-deployment
    spec:
      containers:
      - name: employee-management-backend
        image: registry.khyalkara.com/beta:0.0.11
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: em-frontent-deployment
spec:
  selector:
    matchLabels:
      app: em-frontent-deployment
  template:
    metadata:
      labels:
        app: em-frontent-deployment
    spec:
      containers:
      - name: employee-management-frontend
        image: registry.khyalkara.com/alpha:0.0.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
