manifests/002-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: em-be-srv
spec:
  selector:
    app: em-backend-deployment
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: em-fe-srv
spec:
  selector:
    app: em-frontent-deployment
  ports:
  - port: 80
    targetPort: 80
