manifests/003-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-management-ingress
  labels:
    name: employee-management-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: employeemanagement.ddns.net
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: em-be-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name:  em-fe-srv
            port:
              number: 80
  tls:
    - hosts:
      - employeemanagement.ddns.net
      secretName: shashin-tls
